2010-07-30 [holger]	3.7.6cvs25

	* src/stock_pixmap.c
		More GdkGC to Cairo porting

2010-07-30 [holger]	3.7.6cvs24

	* src/gtk/colorlabel.c
		One GdkGC usage less

2010-07-29 [holger]	3.7.6cvs23

	* src/printing.c
		Replace some gdk drawing with cairo, as the former
		is going towards deprecation.

2010-07-25 [colin]	3.7.6cvs22

	* src/common/utils.c
		And now for a real fix. g_list_remove() doesn't, of
		course, free the data. But we have to have a solid
		pointer to it in order to free it ourselves instead
		of relying on the old freed list pointer.
		Maybe that's the last patch on the subject now ? :)

2010-07-25 [colin]	3.7.6cvs21

	* src/common/utils.c
		Remove stupid and extraneous g_free() of elements
		which have just been freed by g_list_remove(). (see
		GList documentation). I don't know how it worked before

2010-07-25 [colin]	3.7.6cvs20

	* src/common/utils.c
		Reverse free/use with more logical and safe
		use/free. Thanks to Michael Rasmussen !

2010-07-24 [colin]	3.7.6cvs19

	* src/gtk/quicksearch.c
		Finish 3.7.5cvs42 patch. Probably fixes bug 2232,
		'freeze when using quick search'

2010-07-11 [iwkse]	3.7.6cvs18

	* src/gtk/quicksearch.c
		Add SMALL_LAYOUT to quicksearch_relayout

2010-07-10 [iwkse]	3.7.6cvs17

	* src/mainwindow.h
			Remove forgotten variable from
			the last bugfix #2224

2010-07-10 [colin]	3.7.6cvs16

	* src/mainwindow.c
	* src/gtk/quicksearch.c
		Clean fix for bug #2224: don't mess with GTK settings when
		handling the layout ourselves is enough

2010-07-09 [iwkse]	3.7.6cvs15

	* src/mainwindow.h
	* src/mainwindow.c
			Better fix for Bug #2224

2010-07-09 [iwkse]	3.7.6cvs14

	* src/mainwindow.c
			Bug #2224
			Always use stock icons on buttons

2010-07-08 [colin]	3.7.6cvs13

	* src/gtk/filesel.c
		Fix bug 2223, 'Compilation fails with GTK+
		2.21.3'. Thanks to Jan Psota !

2010-06-29 [pawel]	3.7.6cvs12

	* src/compose.c
		Revert 3.7.5cvs41, it breaks templates that use %X

2010-06-23 [wwp]	3.7.6cvs11

	* src/gtk/colorlabel.c